[package]
name = "matchmaking-server-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.3", features = ["macros"] }
axum-client-ip = "0.5.0"
dashmap = "5.4.0"
envy = "0.4.2"
mimalloc = { version = "0.1.37", default-features = false }
nanoid = "0.4.0"
once_cell = "1.19.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
