[package]
name = "matchmaking-server-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.3", features = ["macros"] }
axum-client-ip = "0.6.0"
dashmap = "6.1.0"
envy = "0.4.2"
governor = "0.6.3"
mimalloc = { version = "0.1.37", default-features = false }
nanoid = "0.4.0"
once_cell = "1.19.0"
regex = "1.11.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
tower = "0.4.13"
tower_governor = "0.4.2"
tracing = { version = "0.1.37", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
